--- a/popup/injector.html
+++ b/popup/injector.html
@@ -1,7 +1,12 @@
+<head>
+    <script src="injector.js"></script>
+    <link rel="stylesheet" href="injector.css" ></script>
+</head>
+
 <h1>Code Injector</h1>
 <section>
     <label for="website"></label><input id="website" placeholder="websiteUrl"></input>
-    <textarea placeholder="Enter Code here ..."></textarea>
+    <textarea id="code" placeholder="Enter Code here ..."></textarea>
 </section>
 
 <button id="save">Save</button>
